# metar_taf_parser

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/metar-taf-cli/: Cargo.toml
crates/metar-taf-cli/src/: cli.rs  commands.rs  fetch.rs  input.rs  main.rs  output.rs  ui.rs
crates/metar-taf-core/: Cargo.toml
crates/metar-taf-core/src/: lib.rs
crates/metar-taf-core/tests/: metar_automated.rs  metar_basic.rs  metar_cavok.rs  metar_clouds.rs  metar_minimal.rs  metar_modifier.rs  taf_fm.rs  (+27 more)
docs/: CODEBASE_REFERENCE.md  PORTING_REGEX_POLICY.md
src/: lib.rs
src/airports/: db.rs  mod.rs  model.rs
src/common/: mod.rs  parse.rs  report_modifier.rs  tokenizer.rs  units.rs  weather_codes.rs
src/metar/: errors.rs  mod.rs
src/taf/: errors.rs
tests/: describe_metar.rs  describe_runway_state.rs  describe_taf.rs  format_describe.rs  metar_basic.rs  metar_cavok.rs  metar_clouds.rs  metar_color_code.rs  metar_minimal.rs  metar_modifier.rs  metar_pressure.rs  metar_remark_parser.rs  metar_rmk.rs  metar_runway_state.rs  metar_rvr.rs  metar_sea_state.rs  metar_strict_mode.rs  metar_temperature_edge.rs  metar_terminator.rs  metar_time.rs  metar_trend.rs  metar_unparsed_groups.rs  metar_vertical_visibility.rs  metar_visibility.rs  metar_visibility_cavok.rs  metar_visibility_statute_miles.rs  metar_weather.rs  metar_weather_complex.rs  metar_wind.rs  metar_wind_shear_runway.rs  metar_wind_variation.rs  parse_unified.rs  taf_basic.rs  taf_becmg.rs  taf_change_groups.rs  taf_clouds.rs  taf_fm.rs  taf_forecast_base.rs  taf_icing_turbulence.rs  taf_modifier.rs  (+14 more)
(+90 files in other folders)
