[package]
name = "metar-taf-cli"
version = "0.2.0-alpha4"
edition = "2024"
description = "CLI tool for parsing METAR and TAF strings"
license = "MIT"

[dependencies]
metar-taf-core = { path = "../metar-taf-core" }
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.26", features = ["blocking", "rustls-tls"] }
serde_json = "1.0.145"
atty = "0.2.14"
serde = { version = "1.0.228", features = ["derive"] }

[[bin]]
name = "metar-taf"
path = "src/main.rs"
